# lut

./: .gitignore  CMakeLists.txt  todo.txt
cmake/: CMakeLists.txt  pch.cmake
cmake/app/entry/: CMakeLists.txt
cmake/include/: FindValgrind.cmake
cmake/lib/lut/: CMakeLists.txt
cmake/lib/lut/async/: CMakeLists.txt  config.h.in
cmake/lib/lut/coupling/meta/: CMakeLists.txt
cmake/lib/lut/hiddenImpl/: CMakeLists.txt
cmake/lib/lut/io/: CMakeLists.txt
cmake/lib/lut/mm/: CMakeLists.txt
cmake/lib/lut/utils/: CMakeLists.txt
cmake/lut/: CMakeLists.txt
cmake/lut/async/: CMakeLists.txt
cmake/lut/couple/: CMakeLists.txt
cmake/lut/couple/generator/: CMakeLists.txt
cmake/lut/couple/meta/: CMakeLists.txt
cmake/lut/couple/parser/: CMakeLists.txt
cmake/lut/couple/runtime/: CMakeLists.txt
cmake/lut/couple/translator/: CMakeLists.txt
cmake/lut/coupling/: CMakeLists.txt
cmake/lut/coupling/compiler/: CMakeLists.txt
cmake/lut/coupling/generator/: CMakeLists.txt
cmake/lut/coupling/idl/: CMakeLists.txt
cmake/lut/coupling/meta/: CMakeLists.txt
cmake/lut/coupling/parser/: CMakeLists.txt
cmake/lut/coupling/runtime/: CMakeLists.txt
cmake/lut/coupling/translator/: CMakeLists.txt
cmake/lut/himpl/: CMakeLists.txt
cmake/lut/io/: CMakeLists.txt
cmake/lut/logger/: CMakeLists.txt
cmake/lut/mm/: CMakeLists.txt
cmake/lut/module/: CMakeLists.txt
cmake/lut/site/: CMakeLists.txt
cmake/victim/: CMakeLists.txt
core/: CMakeLists.txt
core/async/: CMakeLists.txt
core/async/include/: acquire.hpp  event.hpp  functions.hpp  future.hpp  mutex.hpp  sizeProvider.hpp
core/async/include/details/: acquire.hpp  task.hpp  taskInstance.hpp
core/async/src/: event.cpp  functions.cpp  mutex.cpp
core/async/src/details/: acquire.cpp  task.cpp
core/async/src/impl/: effortContainer.hpp  event.cpp  event.hpp  mutex.cpp  mutex.hpp  scheduler.cpp  scheduler.hpp  syncronizer.cpp  syncronizer.hpp  syncronizerWaiter.cpp  syncronizerWaiter.hpp  task.cpp  task.hpp
core/async/src/impl/ctx/: coro.cpp  coro.hpp  engine_boostcontext.cpp  engine_boostcontext.hpp  engine_ucontext.cpp  engine_ucontext.hpp  root.cpp  root.hpp
core/couple/: CMakeLists.txt
core/couple/generator/: CMakeLists.txt
core/couple/meta/: CMakeLists.txt
core/couple/meta/include/: alias.hpp  array.hpp  attribute.hpp  compound.hpp  container1.hpp  container2.hpp  enum.hpp  enumValue.hpp  iface.hpp  inheritable.hpp  inheritance.txt  library.hpp  libraryBuilder.hpp  list.hpp  map.hpp  method.hpp  named.hpp  predecl.hpp  primitive.hpp  ptr.hpp  scope.hpp  set.hpp  sizeProvider.hpp  struct.hpp  type.hpp  variant.hpp
core/couple/meta/src/: alias.cpp  array.cpp  attribute.cpp  container1.cpp  enum.cpp  enumValue.cpp  iface.cpp  inheritable.cpp  library.cpp  libraryBuilder.cpp  map.cpp  method.cpp  named.cpp  primitive.cpp  ptr.cpp  scope.cpp  set.cpp  struct.cpp  type.cpp  variant.cpp
core/couple/meta/src/impl/: alias.cpp  alias.hpp  array.cpp  array.hpp  attribute.cpp  attribute.hpp  compound.cpp  compound.hpp  container1.cpp  container1.hpp  container2.cpp  container2.hpp  enum.cpp  enum.hpp  enumValue.cpp  enumValue.hpp  iface.cpp  iface.hpp  inheritable.cpp  inheritable.hpp  library.cpp  library.hpp  libraryBuilder.cpp  libraryBuilder.hpp  libraryContent.cpp  libraryContent.hpp  list.cpp  list.hpp  map.cpp  map.hpp  method.cpp  method.hpp  named.cpp  named.hpp  primitive.cpp  primitive.hpp  ptr.cpp  ptr.hpp  scope.cpp  scope.hpp  (+8 more)
core/couple/parser/: CMakeLists.txt
core/couple/parser/include/: config.hpp  errorInfo.hpp  exec.hpp
core/couple/parser/src/: config.cpp  errorInfo.cpp  exec.cpp
core/couple/parser/src/impl/: ast.hpp  common.cpp  common.hpp  grammar.cpp  grammar.hpp  grammarError.cpp  grammarError.hpp  parse.cpp  parse.hpp  parseState.hpp  posIterator.hpp  tokenizer.cpp  tokenizer.hpp
core/couple/parser/src/impl/ast/: basesChecker.hpp  metaCreator.hpp  metaLinker.hpp  namesChecker.hpp  (+3 more)
core/couple/runtime/: CMakeLists.txt
core/couple/runtime/include/: hub.hpp  identifier.hpp  iface.hpp  intrusivePtr.hpp  sizeProvider.hpp
core/couple/runtime/src/: hub.cpp  iface.cpp
core/couple/runtime/src/impl/: hub.cpp  hub.hpp  iface.cpp  iface.hpp
core/couple/translator/: CMakeLists.txt
core/couple/translator/src/: main.cpp
core/himpl/: CMakeLists.txt  DciHimpl.cmake
core/himpl/include/: face2Impl.hpp  faceLayout.hpp  impl2Face.hpp  implLayout.hpp  layoutChecker.hpp  sizeFetcher.hpp  sizeProvider.hpp  sizeProviderDefault.hpp
core/io/: CMakeLists.txt
core/io/include/: client.hpp  data.hpp  endpoint.hpp  error.hpp  loop.hpp  server.hpp  sizeProvider.hpp  stream.hpp
core/io/src/: client.cpp  data.cpp  endpoint.cpp  error.cpp  loop.cpp  server.cpp  stream.cpp
core/io/src/impl/: client.cpp  client.hpp  data.cpp  data.hpp  loop.cpp  loop.hpp  poller.cpp  poller.hpp  server.cpp  server.hpp  stream.cpp  stream.hpp  timer.cpp  timer.hpp
core/io/src/impl/data/: segment.cpp  segment.hpp
core/io/src/impl/fd/: base.cpp  base.hpp  connector.cpp  connector.hpp  stream.cpp  stream.hpp
core/io/src/impl/utils/: sockaddr.cpp  sockaddr.hpp
core/logger/: CMakeLists.txt
core/logger/include/: logger.hpp
core/mm/: CMakeLists.txt
core/mm/include/: config.hpp  functions.hpp  newDelete.hpp  sharedInstance.hpp  stack.hpp
core/mm/src/: allocator.cpp  allocator.hpp  allocator.ipp  functions.cpp  functions.ipp  likely.hpp  system.cpp  system.hpp  vm.cpp  vm.hpp
core/mm/src/allocator/: bitIndex.hpp  bitIndex.ipp  block.hpp  block.ipp  blocksHolder.hpp  blocksHolder.ipp  stack.cpp  stack.hpp  stackLayout.hpp  stackState.hpp
core/mm/src/allocator/bitIndex/: address.hpp  level.hpp  level.ipp  orderEvaluator.hpp
core/mm/src/utils/: intrusiveDeque.hpp  intrusiveDeque.ipp  sized_cast.hpp  sized_cast.ipp
core/site/: CMakeLists.txt
core/site/include/: error.hpp  moduleId.hpp  modulePlace.hpp  sizeProvider.hpp
core/site/src/: error.cpp  main.cpp  modulePlace.cpp
core/site/src/impl/: instance.cpp  instance.hpp  module.cpp  module.hpp  modulePlace.cpp  modulePlace.hpp  moduleState.hpp
(+672 files in other folders)
